# portfolio-backend

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
local/: settings.dev.py
portfolio-backend/: manage.py
portfolio-backend/project/: settings.py
portfolio_backend/: __init__.py  manage.py
portfolio_backend/apps/api/: apps.py  urls.py
portfolio_backend/apps/api/migrations/: 0001_initial.py  0002_posts_comments.py  0003_alter_comments_image_alter_posts_image.py
portfolio_backend/apps/api/models/: comments.py  posts.py  projects.py  services.py
portfolio_backend/apps/api/serializers/: comments.py  posts.py  projects.py  services.py
portfolio_backend/apps/api/views/: comments.py  posts.py  projects.py  services.py
portfolio_backend/core/utils/: collections.py  misc.py  settings.py
portfolio_backend/project/: urls.py
portfolio_backend/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py  logging.py
project/: settings.py
